# classes_to_calendar

./: .gitignore  README.md  create_event.py  extract_classes.py  pyproject.toml
